# loginpi

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  RULES.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vercel.json
.claude/: settings.json
.pptx-build/: build.js
.whitepaper-build/: build.js
contracts/bean-token/: .gitignore  Cargo.toml  README.md
contracts/bean-token/src/: lib.rs  test.rs
docs/: Cafe.pi_쉬운_사용자매뉴얼.pptx  Cafe.pi_쉬운_사용자매뉴얼_세로.pptx  Cafe.pi설명서.pptx  DEPLOY_NOTICE.md  DEPLOY_STRATEGY.md  DESIGN_FEEDBACK_SYSTEM.md  FEE_MODE_ADMIN_DESIGN.md  I18N_HARDCODED_AUDIT.md  INFRA_DB_TIERS.md  Infrastructure.pptx  MAINNET_READINESS_CHECKLIST.md  OPS_TOOLS_SETUP.md  PERF_BEFORE_AFTER_2026-06-23.md  PI_LISTING_TECH_APPENDIX_EN.md  PI_MODERATOR_INQUIRY_GIFTING.md  PI_SUPPORT_GDOCI7_INQUIRY.md  PI_등재_기술부록.md  PLAYBOOK_NEXT_PROJECT.md  PRD.md  PRD_0_INT.md  PRD_10_GPS.md  PRD_11_EVENT.md  PRD_12_TOKEN.md  PRD_12_TOKEN_WHITEPAPER_EN.md  PRD_12_TOKEN_백서.md  PRD_12_TOKEN_법무자문의뢰서.md  PRD_13_MSG.md  PRD_14_SUBSC.md  PRD_14_SUBSC_REDESIGN.md  PRD_15_FEE.md  PRD_16_TOKEN_MNG.md  PRD_17_CAFE_THEMA.md  PRD_18_PERFORM.md  PRD_19_CATEGORY.md  PRD_1_PROMPT.md  PRD_20_FEEDBACK.md  PRD_21_DATA_ANAL.md  PRD_22_MONITOR.md  PRD_23_FUNC_TUNING.md  PRD_24_FEES_STRATAGE.md  (+29 more)
messages/: ad.json  ae.json  af.json  am.json  ao.json  ar-AR.json  ar.json  at.json  au.json  az.json  ba.json  bb.json  bd.json  be.json  bf.json  bg.json  bh.json  bi.json  (+164 more)
(+961 files in other folders)
