[package]
name = "bean-token"
version = "0.1.0"
edition = "2021"
description = "BEAN — Cafe.pi 생태계 유틸리티 토큰 (Soroban). 초안 v0.1, 감사 전."
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

# 보안·재현성: 릴리즈 빌드에서 오버플로우 검사 강제(토큰 산술 안전)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
